# aishell

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: MACOS_SETUP.md  RELEASE.md  UBUNTU_SETUP.md
scripts/: autoinstall.sh  install-macos.sh  install-ubuntu.sh
src/aishell/: cli.py  gui.py
